# expected_test_project

./: .gitignore  .gitmodules  CMakeLists.txt
expected_test_project/: CMakeLists.txt  current_function.hpp  error.cpp  error.hpp  exception.cpp  exception.hpp  expected.hpp  main.cpp  math_exception.cpp  math_exception.hpp  type_identity.hpp  unexpected.hpp
